--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "ONE_SIGNAL_ID": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
-  "RADIO_STREAM_URL": "https://gospelradio.256cloud.com/listen/grahamradio/radio.mp3",
+  "RADIO_STREAM_URL": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
   "NOW_PLAYING_TEXT": "MCF 98.7FM",
   "ENABLE_AUTOPLAY": true,
   "ALBUM_ART_ROUND": true,
