--- a/config.json
+++ b/config.json
@@ -1,13 +1,11 @@
 {
-  "ONE_SIGNAL_ID": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
-  "RADIO_STREAM_URL": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
-  "NOW_PLAYING_TEXT": "MCF 98.7FM",
-  "ENABLE_AUTOPLAY": true,
-  "ALBUM_ART_ROUND": true,
-  "AD_STATUS": "1",
-  "BANNER_AD_ID": "ca-app-pub-9523725970329735/1582777730",
-  "INTERSTITIAL_AD_ID": "ca-app-pub-3940256099942544/1033173000",
-  "NATIVE_AD_ID": "ca-app-pub-9523725970329735/3418501959",
-  "APP_OPEN_AD_ID": "ca-app-pub-9523725970329735/4458437642",
-  "INTERSTITIAL_FREQUENCY_PLAY_PAUSE": 2
+    "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
+    "radio_stream_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
+    "now_playing_text": "MCF 98.7FM",
+    "enable_autoplay": true,
+    "ad_status": "1",
+    "banner_ad_id": "ca-app-pub-9523725970329735/1582777730",
+    "interstitial_ad_id": "ca-app-pub-3940256099942544/1033173000",
+    "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
+    "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642"
 }
