--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
-    "radio_stream_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
+    "radio_stream_url": "https://julycast.be/8232/stream.mp3",
     "now_playing_text": "MCF 98.7FM",
     "enable_autoplay": true,
     "ad_status": "1",
