--- a/config.json
+++ b/config.json
@@ -8,12 +8,12 @@
     "interstitial_ad_id": "ca-app-pub-3940256099942544/1033173000",
     "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
     "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
-    "facebook_url": "https://www.facebook.com/kcfchinfo",
-    "instagram_url": "https://new-instagram-url.com",
+    "facebook_url": "https://mcfsermons.256cloud.com/",
+    "instagram_url": "https://chat.whatsapp.com/BCfLuMnlKXDKFnd77y6w16",
     "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "youtube_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
-    "whatsapp_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
+    "whatsapp_url": "https://eternallifetv.online.church/",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
-    "website_url": "https://www.youtube.com/@MutundweChristianFellowship/streamsm"
+    "website_url": "https://sites.google.com/view/mcfsermons/home"
 }
