--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "facebook_url": "https://mcfsermons.256cloud.com/",
     "instagram_url": "https://chat.whatsapp.com/BCfLuMnlKXDKFnd77y6w16",
     "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
-    "youtube_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
+    "youtube_url": "https://www.facebook.com/mutundwechristianfellowship",
     "whatsapp_url": "https://eternallifetv.online.church/",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
