--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "radio_stream_url": "https://julycast.be/8232/stream.mp3",
+    "radio_stream_url": "https://streams.radio.co/s79fbbb432/listen",
     "now_playing_text": "MCF 98.7FM",
     "enable_autoplay": true,
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
