--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "radio_stream_url": "https://streams.radio.co/s79fbbb432/listen",
+    "radio_stream_url": "https://gospelradio.256cloud.com/listen/mcf_radio/radio.mp3",
     "now_playing_text": "MCF 98.7FM",
     "enable_autoplay": true,
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
