--- a/config.json
+++ b/config.json
@@ -1,19 +1,22 @@
 {
-    "radio_stream_url": "https://streams.radio.co/s79fbbb432/listen",
-    "now_playing_text": "MCF 98.7FM",
-    "enable_autoplay": true,
-    "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
     "ad_status": "1",
-    "banner_ad_id": "ca-app-pub-3940256099942544/6300978111",
-    "interstitial_ad_id": "ca-app-pub-3940256099942544/1033173712",
-    "native_ad_id": "ca-app-pub-3940256099942544/2247696110",
-    "app_open_ad_id": "ca-app-pub-3940256099942544/9257395921",
-    "facebook_url": "https://mcfsermons.256cloud.com/",
-    "instagram_url": "https://chat.whatsapp.com/BCfLuMnlKXDKFnd77y6w16",
-    "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
-    "youtube_url": "https://www.facebook.com/mutundwechristianfellowship",
-    "whatsapp_url": "https://eternallifetv.online.church/",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
+    "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
+    "website_url": "https://sites.google.com/view/mcfsermons/home",
+    "youtube_url": "https://www.facebook.com/mutundwechristianfellowship",
+    "banner_ad_id": "ca-app-pub-9523725970329735/1582777730",
+    "facebook_url": "https://www.youtube.com/@MCFSermons/videos",
     "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
-    "website_url": "https://sites.google.com/view/mcfsermons/home"
+    "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
+    "whatsapp_url": "https://eternallifetv.online.church/",
+    "instagram_url": "https://chat.whatsapp.com/BCfLuMnlKXDKFnd77y6w16",
+    "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
+    "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
+    "enable_autoplay": true,
+    "now_playing_text": "MCF 98.7FM",
+    "second_stream_text": "Data Saver",
+    "radio_stream_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
+    "stream_two_url": "https://gospelradio.256cloud.com/listen/mcf_radio/radio.mp3",
+    "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968654",
+    "interstitial_frequency_play_pause": 3
 }
