--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "now_playing_text": "MCF 98.7FM",
     "second_stream_text": "Data Saver",
     "radio_stream_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
-    "stream_two_url": "https://gospelradio.256cloud.com/listen/mcf_radio/radio.mp3",
+    "stream_two_url": https://26223.live.streamtheworld.com/ITRN.mp3",
     "interstitial_ad_id": "ca-app-pub-3940256099942544/1033173712",
     "interstitial_frequency_play_pause": 3
 }
