--- a/config.json
+++ b/config.json
@@ -4,27 +4,24 @@
     "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "website_url": "https://sites.google.com/view/mcfsermons/home",
     "youtube_url": "https://www.facebook.com/mutundwechristianfellowship",
-    "banner_ad_id": "ca-app-pub-9523725970329735/1582777730",
+    "banner_ad_id": "ca-app-pub-3940256099942544/6300978111",
     "facebook_url": "https://www.youtube.com/@MCFSermons/videos",
     "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
     "whatsapp_url": "https://eternallifetv.online.church/",
     "instagram_url": "https://chat.whatsapp.com/CpkeJidFGaH2kcl1UxOa9S",
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
-    "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
-    "enable_autoplay": true,
-    "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968654",
-    "interstitial_frequency_play_pause": 3,
-    
-    "stream_one_url": "https://streams.radio.co/s79fbbb432/listen",
-    "stream_one_text": "MCF 98.7FM",
-    "stream_one_active": true,
-    
+    "app_open_ad_id": "ca-app-pub-3940256099942544/9257395921",
+    "stream_one_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_two_url": "https://gospelradio.256cloud.com/listen/mcf_casterfm/radio.mp3",
-    "stream_two_text": "MCF2018 (AAC+)",
+    "enable_autoplay": true,
+    "stream_one_text": "MCF 98.7FM",
+    "stream_two_text": "MCF Data Saver (AAC+)",
+    "stream_three_url": "https://streams.radio.co/s79fbbb432/listen",
+    "stream_one_active": true,
+    "stream_three_text": "MCF 98.7(Streams.radio.co)",
     "stream_two_active": true,
-    
-    "stream_three_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
-    "stream_three_text": "MCF Satellite",
-    "stream_three_active": true
+    "interstitial_ad_id": "ca-app-pub-3940256099942544/1033173712",
+    "stream_three_active": true,
+    "interstitial_frequency_play_pause": 3
 }
