--- a/config.json
+++ b/config.json
@@ -4,24 +4,27 @@
     "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "website_url": "https://sites.google.com/view/mcfsermons/home",
     "youtube_url": "https://www.facebook.com/mutundwechristianfellowship",
-    "banner_ad_id": "ca-app-pub-3940256099942544/6300978111",
+    "banner_ad_id": "ca-app-pub-9523725970329735/1582777730",
     "facebook_url": "https://www.youtube.com/@MCFSermons/videos",
     "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
     "whatsapp_url": "https://eternallifetv.online.church/",
-    "instagram_url": "https://chat.whatsapp.com/CpkeJidFGaH2kcl1UxOa9S",
+    "instagram_url": "https://chat.whatsapp.com/GFxISTXOSZM2UwSk7h6ZqJ",
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
-    "app_open_ad_id": "ca-app-pub-3940256099942544/9257395921",
-    "stream_one_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
-    "stream_two_url": "https://gospelradio.256cloud.com/listen/mcf_casterfm/radio.mp3",
+    "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
+    "stream_one_url": "http://51.38.131.121/s79fbbb432/listen",
+    "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
+    "stream_four_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3 ",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
-    "stream_three_url": "https://streams.radio.co/s79fbbb432/listen",
+    "stream_four_text": "MCF 98.7FM 4",
+    "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_3/radio.mp3",
     "stream_one_active": true,
-    "stream_three_text": "MCF 98.7(Streams.radio.co)",
+    "stream_three_text": "MCF 98.7FM (3) ",
     "stream_two_active": true,
-    "interstitial_ad_id": "ca-app-pub-3940256099942544/1033173712",
+    "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
+    "stream_four_active": true,
     "stream_three_active": true,
-    "interstitial_frequency_play_pause": 3
+    "interstitial_frequency_play_pause": 4
 }
