--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "stream_one_url": "http://51.38.131.121/s79fbbb432/listen",
     "stream_three_active": true,
     "stream_three_text": "MCF 98.7FM (3) ",
-    "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_3/radio.mp3",
+    "stream_three_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
     "stream_two_active": true,
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
