--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "stream_one_active": true,
     "stream_one_text": "MCF 98.7FM",
     "stream_one_url": "http://51.38.131.121/s79fbbb432/listen",
-    "stream_three_active": true,
+    "stream_three_active": false,
     "stream_three_text": "MCF 3",
     "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_two_active": true,
