--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "stream_one_text": "MCF 98.7FM",
     "stream_one_url": "http://51.38.131.121/s79fbbb432/listen",
     "stream_three_active": true,
-    "stream_three_text": "MCF 98.7(3)",
+    "stream_three_text": "MCF 98.7FM (3)",
     "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_two_active": true,
     "stream_two_text": "MCF Data Saver (AAC+)",
