--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "stream_four_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3 ",
     "stream_one_active": true,
     "stream_one_text": "MCF 98.7FM",
-    "stream_one_url": "https://stream.zeno.fm/yxevony7l29uv",
+    "stream_one_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "stream_three_active": true,
     "stream_three_text": "MCF 98.7FM (3)",
     "stream_three_url": "https://stream.zeno.fm/yxevony7l29uv",
