--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     "stream_three_active": true,
     "stream_three_text": "MCF (3)",
     "stream_three_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_two_active": true,
+    "stream_two_active": false,
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
