--- a/config.json
+++ b/config.json
@@ -15,12 +15,12 @@
     "stream_four_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3 ",
     "stream_one_active": true,
     "stream_one_text": "MCF 98.7FM",
-    "stream_one_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_five_url": "http://51.83.134.192/s79fbbb432/listen",
+    "stream_one_url": "http://51.83.134.192/s79fbbb432/listen",
+    "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_three_active": true,
     "stream_three_text": "MCF (3)",
     "stream_three_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_two_active": false,
+    "stream_two_active": true,
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
