--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_three_active": true,
     "stream_three_text": "MCF (3)",
-    "stream_three_url": "https://stream.zeno.fm/yxevony7l29uv",
+    "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_two_active": true,
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
