--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "stream_one_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_three_active": true,
-    "stream_three_text": "MCF (3)",
+    "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
     "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_two_active": true,
     "stream_two_text": "MCF Data Saver (AAC+)",
