--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "stream_four_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3 ",
     "stream_one_active": true,
     "stream_one_text": "MCF 98.7FM",
-    "stream_one_url": "http://51.83.134.192/s79fbbb432/listen",
+    "stream_one_url": "https://streams.radio.co/s79fbbb432/listen",
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_three_active": true,
     "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
