--- a/config.json
+++ b/config.json
@@ -1,31 +1,33 @@
 {
+    "hide": false,
+    "videourl": "https://live-hls-web-aje.getaj.net/AJE/index.m3u8",
     "ad_status": "1",
-    "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
-    "banner_ad_id": "ca-app-pub-9523725970329735/1582777730",
-    "enable_autoplay": true,
-    "facebook_url": "https://www.youtube.com/@MCFSermons/videos",
-    "instagram_url": "https://chat.whatsapp.com/DBwxbvhVGJJKZZSNFgm6o1",
-    "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
-    "interstitial_frequency_play_pause": 4,
-    "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
-    "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
-    "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
-    "stream_four_active": true,
-    "stream_four_text": "MCF 98.7FM 4",
-    "stream_four_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3 ",
-    "stream_one_active": true,
-    "stream_one_text": "MCF 98.7FM",
-    "stream_one_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
-    "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_three_active": true,
-    "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
-    "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
-    "stream_two_active": true,
-    "stream_two_text": "MCF Data Saver (AAC+)",
-    "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "twitter_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "website_url": "https://sites.google.com/view/mcfsermons/home",
+    "youtube_url": "https://www.facebook.com/mutundwechristianfellowship",
+    "banner_ad_id": "ca-app-pub-9523725970329735/1582777730",
+    "facebook_url": "https://www.youtube.com/@MCFSermons/videos",
+    "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
+    "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
     "whatsapp_url": "https://eternallifetv.online.church/",
-    "youtube_url": "https://www.facebook.com/mutundwechristianfellowship"
+    "instagram_url": "https://chat.whatsapp.com/DBwxbvhVGJJKZZSNFgm6o1",
+    "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
+    "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
+    "stream_one_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
+    "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
+    "enable_autoplay": true,
+    "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
+    "stream_four_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
+    "stream_one_text": "MCF 98.7FM",
+    "stream_two_text": "MCF Data Saver (AAC+)",
+    "stream_four_text": "MCF2018.Caster.fm",
+    "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
+    "stream_one_active": true,
+    "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
+    "stream_two_active": true,
+    "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
+    "stream_four_active": true,
+    "stream_three_active": true,
+    "interstitial_frequency_play_pause": 4
 }
