--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "instagram_url": "https://chat.whatsapp.com/KSIPk3AQ5G40SvJkPDrNOu",
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
     "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
-    "stream_one_url": "https://streams.radio.co/s79fbbb432/listen",
+    "stream_one_url": "http://51.38.131.122/s79fbbb432/listen",
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
