--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_four_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
+    "stream_four_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_four_text": "MCF2018.Caster.fm",
@@ -27,7 +27,7 @@
     "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
-    "stream_four_active": false,
+    "stream_four_active": true,
     "stream_three_active": true,
     "interstitial_frequency_play_pause": 4
 }
