--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
     "stream_four_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
-    "stream_four_text": "MCF2018.Caster.fm",
+    "stream_four_text": "MCF 98.7 (4),
     "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_one_active": true,
     "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
