--- a/config.json
+++ b/config.json
@@ -27,7 +27,7 @@
     "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
-    "stream_four_active": false,
+    "stream_four_active": true,
     "stream_three_active": true,
     "interstitial_frequency_play_pause": 4
 }
