--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "hide": false,
+    "hide": true,
     "videourl": "https://live-hls-web-aje.getaj.net/AJE/index.m3u8",
     "ad_status": "1",
     "tiktok_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
