--- a/config.json
+++ b/config.json
@@ -20,14 +20,14 @@
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_four_url": "https://streams.radio.co/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
-    "stream_two_text": "MCF Data Saver (AAC+)",
+    "stream_two_text": "MCF 2",
     "stream_four_text": "MCF 98.7fm (streams.co)",
     "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_one_active": true,
     "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
-    "stream_four_active": true,
-    "stream_three_active": true,
+    "stream_four_active": false,
+    "stream_three_active": false,
     "interstitial_frequency_play_pause": 4
 }
