--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_four_url": "https://streams.radio.co/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
-    "stream_two_text": "MCF 2",
+    "stream_two_text": "MCF 98.7 FM 2",
     "stream_four_text": "MCF 98.7fm (streams.co)",
     "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_one_active": true,
