--- a/config.json
+++ b/config.json
@@ -15,19 +15,19 @@
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
     "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
     "stream_one_url": "https://streams.radio.co/s79fbbb432/listen",
-    "stream_two_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
+    "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
     "stream_four_url": "https://streams.radio.co/s79fbbb432/listen",
-    "stream_one_text": "MCF 98.7FM",
-    "stream_two_text": "MCF 98.7 FM 2",
+    "stream_one_text": "MCF 98.7FM (Stream.co)",
+    "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_four_text": "MCF 98.7fm (streams.co)",
-    "stream_three_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
+    "stream_three_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
     "stream_one_active": true,
-    "stream_three_text": "MCF(OGG+) Ultra Saver(Wont record)",
+    "stream_three_text": "MCF2018.caster.fm",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
     "stream_four_active": false,
-    "stream_three_active": false,
+    "stream_three_active": true,
     "interstitial_frequency_play_pause": 4
 }
