--- a/config.json
+++ b/config.json
@@ -18,16 +18,16 @@
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_four_url": "https://streams.radio.co/s79fbbb432/listen",
+    "stream_four_url": "https://gospelradio.256cloud.com/listen/mcf_backupstream/radio.mp3",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
-    "stream_four_text": "MCF 98.7fm (streams.co)",
+    "stream_four_text": "MCF Saver 4 (Wont record)",
     "stream_three_url": "https://streams.radio.co/s79fbbb432/listen",
     "stream_one_active": true,
     "stream_three_text": "MCF 98.7FM (Stream.co)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
-    "stream_four_active": false,
+    "stream_four_active": true,
     "stream_three_active": true,
     "interstitial_frequency_play_pause": 4
 }
