--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     "stream_four_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
-    "stream_four_text": "MCF 98.7fm (streams.co)",
+    "stream_four_text": "MCF 98.7fm (streams.radio)",
     "stream_three_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_one_active": true,
     "stream_three_text": "MCF 98.7 (Stream.co)",
