--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
     "stream_four_text": "MCF 98.7fm (streams.radio)",
     "stream_three_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_one_active": true,
-    "stream_three_text": "MCF 98.7 (Stream.co)",
+    "stream_three_text": "MCF 98.7 (Stream.radio)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
     "stream_four_active": false,
