--- a/config.json
+++ b/config.json
@@ -20,9 +20,9 @@
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_four_text": "MCF 98.7fm (streams.radio)",
-    "stream_three_url": "https://streams.radio.co/s79fbbb432/listen",
+    "stream_three_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
     "stream_one_active": true,
-    "stream_three_text": "MCF 98.7 (Stream.radio)",
+    "stream_three_text": "MCF 98.7fm (4)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
     "stream_four_active": false,
