--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
     "stream_four_text": "MCF 98.7fm (streams.radio)",
     "stream_three_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
     "stream_one_active": true,
-    "stream_three_text": "MCF 98.7fm (mcfradio2018)",
+    "stream_three_text": "MCF 98.7 (mcfradio2018)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
     "stream_four_active": true,
