--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     "linkedin_url": "https://www.youtube.com/@MutundweChristianFellowship/streams",
     "native_ad_id": "ca-app-pub-9523725970329735/3418501959",
     "whatsapp_url": "https://eternallifetv.online.church/",
-    "instagram_url": "https://chat.whatsapp.com/KYJr6x7yjYiBgHrkrNi7do?mode=ems_wa_t",
+    "instagram_url": 
+"https://chat.whatsapp.com/HlyFW0qrQGN2ODNcByKNwE?mode=ems_wa_t",
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
     "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
     "stream_one_url": "https://gospelradio.webusite.com/listen/mcf_casterfm/radio.mp3",
