--- a/config.json
+++ b/config.json
@@ -21,15 +21,13 @@
     "stream_four_url": "http://51.83.134.192/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
-    "stream_four_text": "MCF 98.7fm (streams.radio)",
+    "stream_four_text": "MCF 98.7fm (streams.radio.co)",
     "stream_three_url": "https://live-radio.mfc-streaming-service.online/orion_west-satelite_haven/transmiter.mp3",
     "stream_one_active": true,
     "stream_three_text": "MCF 98.7 (mcfradio2018)",
     "stream_two_active": true,
     "interstitial_ad_id": "ca-app-pub-9523725970329735/2242968000",
-    "stream_four_active": false,
+    "stream_four_active": true,
     "stream_three_active": true,
     "interstitial_frequency_play_pause": 4
 }
-
-
