--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
-    "stream_four_url": "http://51.83.134.192/s79fbbb432/listen",
+    "stream_four_url": "https://streams.radio.co/s79fbbb432/listen",
     "stream_one_text": "MCF 98.7FM",
     "stream_two_text": "MCF Data Saver (AAC+)",
     "stream_four_text": "MCF 98.7fm (streams.radio.co)",
