--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
 "https://chat.whatsapp.com/GRkqbfMBGq80pTbiXSP1sk?mode=wwt",
     "one_signal_id": "b86f98b6-9cf5-4ebc-80e3-1c9a23252ef2",
     "app_open_ad_id": "ca-app-pub-9523725970329735/4458437642",
-    "stream_one_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
+    "stream_one_url": "https://gospelradio.webusite.com/listen/mcf_casterfm/radio.mp3",
     "stream_two_url": "http://84.8.135.255/listen/mcf_casterfm/radio.mp3",
     "enable_autoplay": true,
     "stream_five_url": "https://stream.zeno.fm/yxevony7l29uv",
